gitops/manifests/layer1/ingresses/gitlab.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlabingress
  namespace: gitlab
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
    - host: gitlab.agardner.hotday.keptn.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab-webservice-default
                port:
                  number: 8080
