gitops/manifests/layer1/ingresses/webhook.site.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhookingress
  namespace: webhook
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
    - host: webhook.agardner.hotday.keptn.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webhook
                port:
                  number: 8084
